# tidy_jcm_materials

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: pages.yml  release.yml  test_code.yml
docs/: _config.yml  api.rst
tests/: test_add.py  test_jcm.py
tidy_jcm_materials/: __init__.py  add.py
