[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
  {name = "Jan David Fischbach", email = "mail@jan-dav.id"}
]
classifiers = [
  "Operating System :: OS Independent"
]

name = "tidy_jcm_materials"
version = "0.1.2"
description = "Converts materials from tidy3d database to JCMwave compatible pole residue format"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "tidy3d>=2.9.3",
]

[dependency-groups]
dev = [
    "find-jcmwave>=1.0.2",
    "jupyter-book==2.1.4",
    "jupytext>=1.19.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "tbump>=6.9.0",
]

[tool.black]
exclude = '''  # Specify the files/dirs that should be ignored by the black formatter
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | env
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py310']

[tool.codespell]
ignore-words-list = "tidy3d, jcm"

[tool.pytest.ini_options]
# addopts = --tb=no
addopts = '--tb=short'
norecursedirs = ["extra/*.py"]
python_files = ["tidy_jcm_materials/*.py", "notebooks/*.ipynb", "tests/*.py"]
testpaths = ["tidy_jcm_materials/", "tests"]

[tool.ruff]
fix = true
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
  "B905",  # `zip()` without an explicit `strict=` parameter
  "C408"  # C408 Unnecessary `dict` call (rewrite as a literal)
]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP"
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.setuptools.packages]
find = {}

[tool.tbump]

# For each file to patch, add a [[file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "README.md"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "tidy_jcm_materials/__init__.py"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "0.1.2"
# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''
